--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                 {
                     <div class="col">
                         <p>@pizza.Name</p>
-                        <p>Ingredienti: @pizza.Overview.Substring()</p>
+                        <p>Ingredienti: @pizza.Overview</p>
                         <div>
                             <img class="w-100" src="@pizza.Image" alt="@pizza.Name" />
                         </div>
