fixed link to menu

--- a/la-mia-pizzeria-razor-layout/Views/Menu/Index.cshtml
+++ b/la-mia-pizzeria-razor-layout/Views/Menu/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Menu";
+    Layout = null;
     List<Pizza> pizzas = new List<Pizza>();
     Pizza margherita = new Pizza("Margherita", "Passata di pomodoro, Mozzarella", "https://www.finedininglovers.it/sites/g/files/xknfdk1106/files/fdl_content_import_it/margherita-50kalo.jpg", 6.50);
     Pizza quattroStagioni = new Pizza("4 Stagioni", "Passata di pomodoro, Mozzarella, Prosciutto cotto, Carcofini, Funghi, Pomodorini", "https://www.petitchef.it/imgupl/recipe/pizza-4-stagioni--449891p695427.jpg", 8.00);
