--- a/la-mia-pizzeria-razor-layout/Views/Shared/_LayoutHeader.cshtml
+++ b/la-mia-pizzeria-razor-layout/Views/Shared/_LayoutHeader.cshtml
@@ -3,8 +3,8 @@
     <div class="logo">Pizzeria Bella Napoli</div>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="~/_LayoutMenu.cshtml">Menu</a></li>
+            <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+            <li><a asp-controller="Menu" asp-action="Index">Menu</a></li>
             <li><a href="#">Contatti</a></li>
         </ul>
     </nav>
