--- a/la-mia-pizzeria-razor-layout/Views/Menu/Index.cshtml
+++ b/la-mia-pizzeria-razor-layout/Views/Menu/Index.cshtml
@@ -2,10 +2,10 @@
     ViewData["Title"] = "Menu";
     Layout = null;
     List<Pizza> pizzas = new List<Pizza>();
-    Pizza margherita = new Pizza("Margherita", "Passata di pomodoro, Mozzarella", "https://www.finedininglovers.it/sites/g/files/xknfdk1106/files/fdl_content_import_it/margherita-50kalo.jpg", 6.50);
-    Pizza quattroStagioni = new Pizza("4 Stagioni", "Passata di pomodoro, Mozzarella, Prosciutto cotto, Carcofini, Funghi, Pomodorini", "https://www.petitchef.it/imgupl/recipe/pizza-4-stagioni--449891p695427.jpg", 8.00);
-    Pizza marinara = new Pizza("Marinara", "Passata di pomodoro, Aglio, Olio", "https://www.pizzarecipe.org/wp-content/uploads/2019/01/Pizza-Marinara.jpg", 5.50);
-    Pizza prosciuttoFughi = new Pizza("Prosciutto e Funghi", "Passata di pomodoro, Mozzarella, Prosciutto cotto, Funghi", "https://i1.wp.com/www.piccolericette.net/piccolericette/wp-content/uploads/2019/10/4102_Pizza.jpg?resize=895%2C616&ssl=1", 7.50);
+    Pizza margherita = new Pizza("Margherita", "Passata di pomodoro, Mozzarella", "https://www.finedininglovers.it/sites/g/files/xknfdk1106/files/fdl_content_import_it/margherita-50kalo.jpg", (decimal)6.50);
+    Pizza quattroStagioni = new Pizza("4 Stagioni", "Passata di pomodoro, Mozzarella, Prosciutto cotto, Carcofini, Funghi, Pomodorini", "https://www.petitchef.it/imgupl/recipe/pizza-4-stagioni--449891p695427.jpg", (decimal)8.00);
+    Pizza marinara = new Pizza("Marinara", "Passata di pomodoro, Aglio, Olio", "https://www.pizzarecipe.org/wp-content/uploads/2019/01/Pizza-Marinara.jpg", (decimal)5.50);
+    Pizza prosciuttoFughi = new Pizza("Prosciutto e Funghi", "Passata di pomodoro, Mozzarella, Prosciutto cotto, Funghi", "https://i1.wp.com/www.piccolericette.net/piccolericette/wp-content/uploads/2019/10/4102_Pizza.jpg?resize=895%2C616&ssl=1", (decimal)7.50);
     pizzas.Add(margherita);
     pizzas.Add(quattroStagioni);
     pizzas.Add(marinara);
